update description of helper service
Signed-off-by: Izhar ul Hassan <izhar.hassan@pm.me>

--- a/recipes-core/iotedgehelper/files/aziot_helper.service
+++ b/recipes-core/iotedgehelper/files/aziot_helper.service
@@ -1,7 +1,6 @@
 [Unit]
-Description=IoTEdge home mount /var/local/lib/aziot -> /var/lib/aziot.
+Description=Create IoT Edge home directories and set permissions
 DefaultDependencies=no
-Conflicts=umount.target
 After=local-fs.target
 
 [Service]
